Assignment: Home Page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Christoper E. Calvachi</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals by Rubia M. Francesco. A brief about me, my background, and resources on web development.">
+    <meta name="author" content="Rubia M. Francesco">
+    <link rel="stylesheet" href="styles/base.css">
+    <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <h1>WDD 131: Dynamic Web Fundamentals - Christoper Enrique Calvachi Carabajo</h1>
+        <nav>
+            <a href="https://www.linkedin.com/in/christoper-enrique-calvachi-carabajo/">LinkedIn</a>
+            <a href="https://byui.instructure.com/">I-Learn</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/53?lang=spa">Scripture</a>
+            <a href="#">Final Project</a>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+        <!-- About Me Section -->
+        <section class="card">
+            <h2>About Me</h2>
+            <div class="content">
+                <p>My name is Christoper and they call me Kyque. I was born in Ecuador and live with my family in Quito. I have been married for 4 years with my wife, my wife is from Guatemala. I am currently CEO of a software development services company called Glama. I have already 5 years of experience in software development, and these courses in BUY-I are helping me a lot to remember the basics that many times in the work is forgotten.</p>
+                <img src="./images/profile.png" alt="Photo of Christoper E. Calvachi">
+            </div>
+        </section>
+
+        <!-- Location Section -->
+        <section class="card">
+            <h2>Quito, Ecuador</h2>
+            <div class="content">
+                <img src="./images/Flag_of_Ecuador.svg.png" alt="Official Flag of Madagascar">
+                <p>Quito, the capital of Ecuador, is a vibrant city full of history, located in the Andes Mountains at 2,850 meters above sea level. Known for its historic colonial center, which is a UNESCO World Heritage Site, Quito combines colonial architecture with modern urban life. From here, you can enjoy spectacular views of nearby mountains and volcanoes, explore museums, plazas, and sample the rich Ecuadorian cuisine.
+        </section>
+
+        <!-- Web Dev Resources Section -->
+        <section class="card">
+            <h2>Web Dev Resources</h2>
+            <ul>
+                <li><a href="https://dev.to">Dev.to Community</a></li>
+                <li><a href="https://www.smashingmagazine.com/">Smashing Magazine</a></li>
+                <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
+                <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
+                <li><a href="https://www.udemy.com/">Udemy</a></li>
+                <li><a href="https://picsum.photos">Lorem Picsum Image Placeholder</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; <span id="currentyear"></span> | Christoper Enrique Calvachi | Ecuador</p>
+        <p id="lastModified">Last Modification: </p>
+    </footer>
 </body>
 </html>
