--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Christoper E. Calvachi</title>
-    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals by Rubia M. Francesco. A brief about me, my background, and resources on web development.">
-    <meta name="author" content="Rubia M. Francesco">
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals by Christoper E. Calvachi. A brief about me, my background, and resources on web development.">
+    <meta name="author" content="Christoper E. Calvachi">
     <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
 </head>
@@ -36,7 +36,7 @@
         <section class="card">
             <h2>Quito, Ecuador</h2>
             <div class="content">
-                <img src="./images/Flag_of_Ecuador.svg.png" alt="Official Flag of Madagascar">
+                <img src="./images/Flag_of_Ecuador.svg.png" alt="Official Flag of Ecuador">
                 <p>Quito, the capital of Ecuador, is a vibrant city full of history, located in the Andes Mountains at 2,850 meters above sea level. Known for its historic colonial center, which is a UNESCO World Heritage Site, Quito combines colonial architecture with modern urban life. From here, you can enjoy spectacular views of nearby mountains and volcanoes, explore museums, plazas, and sample the rich Ecuadorian cuisine.
         </section>
 
