--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Filtered Temples</title>
+  <title>WDD 131 - Temples Filter - Christoper E. Calvachi</title>
+  <meta name="description" content="WDD 131 - Dynamic Web Fundamentals by Christoper E. Calvachi. Page where you can find temples of the Church of Jesus Christ of Latter-day Saints with some of its characteristics.">
+  <meta name="author" content="Christoper E. Calvachi">
   <link rel="stylesheet" href="./styles/filtered-temples.css">
   <script src="./scripts/filtered-temples.js" defer></script>
 </head>
@@ -19,7 +21,7 @@
   </header>
   <main id="templesContainer"></main>
   <footer>
-    <p>&copy; <span id="currentYear"></span> | Last modified: <span id="lastModified"></span></p>
+    <p>&copy; <span id="currentYear"></span> | Christoper Enrique Calvachi | Ecuador | Last Modificate: <span id="lastModified"></span></p>
   </footer>
   <script src="filtered-temples.js"></script>
 </body>
