landing casi terminada

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <!-- About Me Section -->
         <section class="card">
-            <h2>About Me</h2>
+            <h2>About Me...</h2>
             <div class="content">
                 <p>My name is Christoper and they call me Kyque. I was born in Ecuador and live with my family in Quito. I have been married for 4 years with my wife, my wife is from Guatemala. I am currently CEO of a software development services company called Glama. I have already 5 years of experience in software development, and these courses in BUY-I are helping me a lot to remember the basics that many times in the work is forgotten.</p>
                 <img src="./images/profile.png" alt="Photo of Christoper E. Calvachi">
