terminado resposive y diseño web

--- a/final/index.html
+++ b/final/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="menu container">
+        <div class="menu">
             <a href="#">Logo</a>
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="#" class="menu-icon" alt="">
+                <img src="./img/landing.png" class="menu-icon" alt="">
             </label>
 
             <nav class="navbar">
@@ -35,7 +35,7 @@
     </header>
     <main class="news container">
         <div class="news-con">
-            <img src="#" alt="">
+            <img src="./img/news.jpeg" alt="">
             <h3>NEWS</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto veniam veritatis magni perferendis quod delectus saepe at nam facere reprehenderit animi tenetur ullam sequi repudiandae id minima, fugit praesentium itaque.</p>
         </div>
