--- a/final/index.html
+++ b/final/index.html
@@ -26,8 +26,8 @@
 
         <div class="header-content container">
             <div class="content">
-                <h1>Lorem, ipsum dolor sit</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit earum veritatis non repellendus magnam facilis nobis dolores quisquam! Dolorum facere ex libero voluptas veritatis necessitatibus facilis quibusdam error nam ipsum?</p>
+                <h1>Ecuador Power Outages: Updated Information and Tips to Manage the Electricity Crisis</h1>
+                <p>On our website, we keep you informed about the power outage situation in Ecuador, providing you with real-time updates on power outages in different regions.</p>
                 <a href="#" class="btn-1">MAPA DE APAGONES</a>
             </div>
             <img src="./img/landing.png" alt="">
@@ -36,18 +36,21 @@
     <main class="news container">
         <div class="news-con">
             <img src="./img/news.jpeg" alt="">
-            <h3>NEWS</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto veniam veritatis magni perferendis quod delectus saepe at nam facere reprehenderit animi tenetur ullam sequi repudiandae id minima, fugit praesentium itaque.</p>
+            <h3>Power outages affect farmers</h3>
+            <p>Continuous blackouts in several areas of the country are causing serious problems for farmers, who depend on electricity to irrigate their crops, refrigerate products and operate machinery. Many producers have reported losses due to the impossibility of maintaining normal operations during power outages.</p>
         </div>
+        <hr>
         <div class="news-con">
-            <img src="#" alt="">
-            <h3>NEWS</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto veniam veritatis magni perferendis quod delectus saepe at nam facere reprehenderit animi tenetur ullam sequi repudiandae id minima, fugit praesentium itaque.</p>
+            <img src="./img/news2.jpeg" alt="">
+            <h3>The electricity crisis will be resolved before December 20.</h3>
+            <p>The government has announced that it is working to solve the electricity crisis affecting several regions of the country. It is estimated that before December 20 the electricity supply will be restored in a stable manner, thanks to the implementation of new energy generation projects and improvements in the infrastructure of the electric system.</p>
         </div>
+        <hr>
         <div class="news-con">
-            <img src="#" alt="">
-            <h3>NEWS</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto veniam veritatis magni perferendis quod delectus saepe at nam facere reprehenderit animi tenetur ullam sequi repudiandae id minima, fugit praesentium itaque.</p>
+            <img src="./img/news3.jpeg" alt="">
+            <h3>Care of electrical appliances during blackouts</h3>
+            <p>During blackouts, it is important to take precautions to protect household appliances from damage. Experts recommend unplugging electronic appliances during power outages and waiting a few minutes after power has been restored before plugging them back in to avoid voltage spikes that could damage them.</p>
+            <a href="#" class="btn-1">NEWS AVAILABLE NOW</a>
         </div>
     </main>
     <footer>
@@ -55,23 +58,21 @@
             <div class="info">
                 <div class="info-content">
                     <div class="info-price">
-                        <h2>COST</h2>
-                        <p class="price">35000</p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam nihil corporis alias delectus fugiat, quia, neque temporibus amet eum praesentium, consequuntur deleniti id perferendis numquam esse ullam! Quasi, incidunt ab?</p>
+                        <h2>Important reminder</h2>
+                        <p>remember that the national government announced the suspensions of power cuts until december 20, since the conditions of the power dams have improved significantly during the last month.</p>
                     </div>
                     <div class="info-txt">
-                        <h2>pricing list</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur maxime adipisci aliquam qui ut explicabo asperiores, voluptates sapiente sunt, quae, quisquam odit eius ea iusto fugit eligendi saepe. Fuga, quae!</p>
-                        <a href="#" class="btn-1">INFORMACION</a>
+                        <h2>QUITO POWER OUTAGE MAP</h2>
+                        <p>You can check the outages from this website without any problem, remember to check which block you belong to, it is very easy to navigate and use.</p>
+                        <a href="https://arcgis.eeq.com.ec/portal/apps/instant/minimalist/index.html?appid=f3c3f3b184ab44debc4978b9c380bc1d" target="_blank" class="btn-1">MAP</a>
                     </div>
                 </div>
                 <hr>
                 <div class="enlaces">
                     <h3>LOGO</h3>
                     <div class="enlace">
-                        <li><a href="#">lorem</a></li>
-                        <li><a href="#">lorem</a></li>
-                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">Ministerio de Energia</a></li>
+                        <li><a href="#">Gobierno Nacional del Ecuador</a></li>
                     </div>
                 </div>
             </div>
