--- a/final/news.html
+++ b/final/news.html
@@ -6,7 +6,7 @@
     <title>WDD 131 - Dynamic Web Fundamentals - Christoper E. Calvachi</title>
     <meta name="description" content="WDD 131 - final project where we put everything we have learned to the test in a single project.">
     <meta name="author" content="Christoper E. Calvachi">
-    <link rel="stylesheet" href="../final/styles/styles.css">
+    <link rel="stylesheet" href="../final/styles/news.css">
     <script src="../final/scripts/final.js" defer></script>
 </head>
 <body>
@@ -36,26 +36,25 @@
             <img src="./img/landing.png" alt="">
         </div>
     </header>
-    <main class="news container">
-        <div class="news-con">
-            <img src="./img/news.jpeg" alt="">
-            <h3>Power outages affect farmers</h3>
-            <p>Continuous blackouts in several areas of the country are causing serious problems for farmers, who depend on electricity to irrigate their crops, refrigerate products and operate machinery. Many producers have reported losses due to the impossibility of maintaining normal operations during power outages.</p>
+
+    <section class="news-section">
+        <div class="news-image">
+            <img src="../final/img/news3.jpeg" alt="Noticia">
         </div>
-        <hr>
-        <div class="news-con">
-            <img src="./img/news2.jpeg" alt="">
-            <h3>The electricity crisis will be resolved before December 20.</h3>
-            <p>The government has announced that it is working to solve the electricity crisis affecting several regions of the country. It is estimated that before December 20 the electricity supply will be restored in a stable manner, thanks to the implementation of new energy generation projects and improvements in the infrastructure of the electric system.</p>
+        <div class="news-content">
+            <h2>Care of electrical appliances during blackouts</h2>
+            <p>
+                In view of the frequent blackouts that affect several regions of Ecuador, it is essential to take measures to protect electronic devices and avoid irreversible damage. Here are some practical tips for responsible handling:
+                Disconnect devices: Before a scheduled blackout or when the power supply is interrupted, disconnect televisions, computers, refrigerators and other sensitive appliances to prevent damage from voltage spikes when electricity is restored. 
+                Use surge protectors: Installing voltage regulators or surge suppressors can help protect equipment from electrical fluctuations. These tools are especially useful in areas where power outages are recurrent.
+                Avoid overloading connections: During a power outage, avoid plugging too many devices into a single outlet when using generators or batteries. This can generate dangerous overloads.
+                Ensure refrigeration: Keep the refrigerator door closed during a power outage to keep food fresher for longer, reducing the need to constantly open it.
+                Check electrical conditions: After a power outage, make sure that the power supply is stable before reconnecting appliances. This will avoid exposing them to initial fluctuations.
+                With these measures, you will not only protect your appliances and electronics, but also contribute to the responsible use of electricity.
+            </p>
         </div>
-        <hr>
-        <div class="news-con">
-            <img src="./img/news3.jpeg" alt="">
-            <h3>Care of electrical appliances during blackouts</h3>
-            <p>During blackouts, it is important to take precautions to protect household appliances from damage. Experts recommend unplugging electronic appliances during power outages and waiting a few minutes after power has been restored before plugging them back in to avoid voltage spikes that could damage them.</p>
-            <a href="../final/news.html" class="btn-1">NEWS AVAILABLE NOW</a>
-        </div>
-    </main>
+    </section>
+    
     <footer>
         <div class="container">
             <div class="info">
