--- a/final/index.html
+++ b/final/index.html
@@ -31,7 +31,7 @@
             <div class="content">
                 <h1>Ecuador Power Outages: Updated Information and Tips to Manage the Electricity Crisis</h1>
                 <p>On our website, we keep you informed about the power outage situation in Ecuador, providing you with real-time updates on power outages in different regions.</p>
-                <a href="#" class="btn-1">MAPA DE APAGONES</a>
+                <a href="https://arcgis.eeq.com.ec/portal/apps/instant/minimalist/index.html?appid=f3c3f3b184ab44debc4978b9c380bc1d" class="btn-1">QUITO POWER OUTAGE MAP</a>
             </div>
             <img src="./img/landing.png" alt="">
         </div>
